test_suite/alan-2022-examples/failing/007480_mutation.alan
source L begin relax h end
